@startuml ContextDetector

!include State.puml

interface Detector {
  +detect(input: String): Boolean
}

abstract class ContextDetector {
  +detect(input: String): Boolean
  +nextToken(): String?
  +transitionTo(state: State): void
  +accept(): void
  +reject(): void
  #createInitialState(): State
  #beforeDetection(): void
  #afterInputConsumed(): void
  -tokens: List<String>
  -index: Int
  -terminal: Boolean
  #currentState: State
  -accepted: Boolean
}

Detector <|.. ContextDetector
ContextDetector o--> State : currentState

@enduml
